# channels_demo

./: .gitignore  README.md  Readme.md  deets.md  pyproject copy.toml  pyproject.toml  requirements.txt  server.py  server_dev.py  server_prod.py
apps/api/: models.py
apps/api/templates/api/: profile.html
apps/chat/: consumers.py  models.py  mongo_models.py  routing.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_chatroom_slug.py  0003_alter_chatroom_slug.py
apps/chat/templates/chat/: chat.html  chat_room.html  confirm_delete_message.html  edit_message.html  message_management.html
apps/myauth/: apps.py  forms.py  models.py  views.py
apps/myauth/templates/auth/: register.html
apps/tasks/: consumers.py  views.py
apps/tasks/templates/tasks/: game.html  index.html
backend/: admin.py  asgi.py  log_$(date  middleware.py  settings.py  urls.py  utils.py
backend/api/: views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: admin.py  models.py  views.py
backend/myauth/: admin.py  models.py  views.py
backend/myauth/migrations/: 0001_initial.py
backend/settings/: base.py  dev.py  prod.py
backend/templates/: base.html
progress_app/: db.sqlite3  manage.py  scripts.py
progress_app/accounts/: models.py  urls.py  views.py
progress_app/accounts/migrations/: 0001_initial.py
progress_app/chat/: consumers.py  mongo_models.py  routing.py  urls.py  views.py
progress_app/chat/migrations/: 0001_initial.py  0002_chatroom_is_group_chat.py
progress_app/myauth/: apps.py  urls.py  views.py
progress_app/myauth/migrations/: 0001_initial.py
progress_app/progress_app/: asgi.py  settings.py  urls.py  wsgi.py
progress_app/tasks/: consumers.py  routing.py  urls.py  views.py
progress_app/templates/: base.html
static/css/: styles.css
templates/: base.html  error.html
(+11 files in other folders)
