[tool.poetry]
name = "channels_demo"
version = "0.1.0"
description = ""
authors = ["subhamivan <ivan.sarangi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" }
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
channels = "^4.2.0"
daphne = "4.0.0"
channels-redis = "^4.2.0"
django-ninja = "^1.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
mongoengine = "^0.29.1"
pymongo = "^4.10.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^4.4.6"

[tool.poetry.scripts]
dev = "server:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
